--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/FMC/B787_10_FMC.css
@@ -42,7 +42,7 @@
     width: 100%;
     height: 100%;
     vertical-align: top;
-    background-color: #40464d; /** #5c656f */
+    background-color: #60606b;
 }
 
 #Electricity[state=off] {
