chore: Evenly spaced out EICAS layout

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/Pages/B787_10_EICAS.css
@@ -96,12 +96,14 @@ b787-10-eicas-element text.vlabel {
 
 b787-10-eicas-element text.valueWhite {
     fill: var(--eicasWhite);
+    font-size: 32px;
     text-anchor: end;
     letter-spacing: -4px;
 }
 
 b787-10-eicas-element text.valueGreen {
     fill: var(--eicasGreen);
+    font-size: 42px;
     text-anchor: end;
     letter-spacing: -4px;
 }
